Added heat bath algorithm.

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -499,6 +499,15 @@
   publisher={Dover Publications}
 }
 
+@book{1998art,
+  title={The Art Of Computer Programming, Volume 2: Seminumerical Algorithms, 3/E},
+  number={v. 2},
+  isbn={9788177583359},
+  url={https://books.google.it/books?id=OtLNKNVh1XoC},
+  year={1998},
+  publisher={Pearson Education}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% END OF BOOKS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -75394,4 +75403,15 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     volume = "199",
     pages = "536--540",
     year = "1987"
+}
+
+@article{luscher1994portable,
+  title={A portable high-quality random number generator for lattice field theory simulations},
+  author={L{\"u}scher, Martin},
+  journal={Computer physics communications},
+  volume={79},
+  number={1},
+  pages={100--110},
+  year={1994},
+  publisher={Elsevier}
 }
