Fixed some uppercase entries.

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -75389,14 +75389,14 @@ Mathematics, pages 556--588 (Springer, 1985)}",
 	volume     = {11},
 	number     = {09},
 	pages      = {1151--1178},
-	author     = {DIRK SCHLINGEMANN},
-	title      = {{FROM} {EUCLIDEAN} {FIELD} {THEORY} {TO} {QUANTUM} {FIELD} {THEORY}},
+	author     = {Dirk Schlingemann},
+	title      = {From Euclidean Field Theory to Quantum Field Theory},
 	journal    = {Reviews in Mathematical Physics}
 }
 
 @article{Neuberger:1987kt,
     author = "Neuberger, Herbert",
-    title = "{SPINLESS FIELDS ON F(4) LATTICES}",
+    title = "{Spinless Fields on F(4) Lattices}",
     reportNumber = "RU-35-87",
     doi = "10.1016/0370-2693(87)91623-6",
     journal = "Phys. Lett. B",
