--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -24,7 +24,7 @@
 \newpage
 {
 	\hypersetup{linkcolor=black}
-%	\setcounter{tocdepth}{1}
+	\setcounter{tocdepth}{2}
 	\tableofcontents
 	\thispagestyle{empty}
 }
