Added spacetime symmetries.

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -42056,8 +42056,8 @@ Mathematics, pages 556--588 (Springer, 1985)}",
 
 @article{Lang:1982tj,
       author         = "Lang, C. B. and Rebbi, C.",
-      title          = "{Potential and Restoration of Rotational Symmetry in
-                        SU(2) Lattice Gauge Theory}",
+      title          = "Potential and Restoration of Rotational Symmetry in
+                        SU(2) Lattice Gauge Theory",
       journal        = "Phys. Lett.",
       volume         = "B115",
       year           = "1982",
