Added Higher symmetry lattices, to be reviewed.

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -441,7 +441,7 @@
 }
 
 @book{peskin1995introduction,
-    title       =   {An Introduction To Quantum Field Theory},
+    title       =   "An Introduction To Quantum Field Theory",
     author      =   {Peskin, M.E. and Schroeder, D.V.},
     isbn        =   {9780813345437},
     series      =   {Frontiers in Physics},
@@ -451,7 +451,7 @@
 }
 
 @book{weinberg1995quantum,
-    title       =   {The Quantum Theory of Fields},
+    title       =   "The Quantum Theory of Fields",
     author      =   {Weinberg, S.},
     number      =   {v. 2},
     isbn        =   {9780521550024},
@@ -463,7 +463,7 @@
 }
 
 @book{kaku1993quantum,
-    title       =   {Quantum Field Theory: A Modern Introduction},
+    title       =   "Quantum Field Theory: A Modern Introduction",
     author      =   {Kaku, M.},
     isbn        =   {9780195091588},
     lccn        =   {92027704},
@@ -473,7 +473,7 @@
 }
 
 @book{ramond1997field,
-    title       =   {Field Theory: A Modern Primer},
+    title       =   "Field Theory: A Modern Primer",
     author      =   {Ramond, P.},
     isbn        =   {9780201304503},
     lccn        =   {90000910},
@@ -485,12 +485,12 @@
 
 @book{DeGrand:2006zz,
     author      =   {DeGrand, Thomas and Detar, Carleton E.},
-    title       =   {Lattice methods for quantum chromodynamics},
+    title       =   "Lattice methods for quantum chromodynamics",
     year        =   {2006}
 }
 
 @book{coxeter2012regular,
-  title={Regular Polytopes},
+  title="Regular Polytopes",
   author={Coxeter, H.S.M.},
   isbn={9780486141589},
   series={Dover Books on Mathematics},
@@ -500,13 +500,25 @@
 }
 
 @book{1998art,
-  title={The Art Of Computer Programming, Volume 2: Seminumerical Algorithms, 3/E},
+  title="The Art Of Computer Programming, Volume 2: Seminumerical Algorithms, 3/E",
   number={v. 2},
   isbn={9788177583359},
   url={https://books.google.it/books?id=OtLNKNVh1XoC},
   year={1998},
   publisher={Pearson Education}
 }
+
+@book{adams1996lectures,
+  title="Lectures on Exceptional Lie Groups",
+  author="Adams, J.F. and Mahmud, Z. and Mimura, M.",
+  isbn="978-0-22600-527-0",
+  lccn="96021456",
+  series="Chicago Lectures in Mathematics",
+  url="https://books.google.it/books?id=a3XCft6dubIC",
+  year="1996",
+  publisher="University of Chicago Press"
+}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -11336,7 +11348,7 @@
 
 @article{Neuberger:1987kt,
       author         = "Neuberger, Herbert",
-      title          = "{Spinless Fields on {$F_4$} Lattices}",
+      title          = "Spinless Fields on {$F_4$} Lattices",
       journal        = "Phys. Lett.",
       volume         = "B199",
       pages          = "536",
