Added Scalar fields on F4 lattice.

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -75406,19 +75406,8 @@ Mathematics, pages 556--588 (Springer, 1985)}",
 	journal    = {Reviews in Mathematical Physics}
 }
 
-@article{Neuberger:1987kt,
-    author = "Neuberger, Herbert",
-    title = "{Spinless Fields on F(4) Lattices}",
-    reportNumber = "RU-35-87",
-    doi = "10.1016/0370-2693(87)91623-6",
-    journal = "Phys. Lett. B",
-    volume = "199",
-    pages = "536--540",
-    year = "1987"
-}
-
 @article{luscher1994portable,
-  title={A portable high-quality random number generator for lattice field theory simulations},
+  title="A portable high-quality random number generator for lattice field theory simulations",
   author={L{\"u}scher, Martin},
   journal={Computer physics communications},
   volume={79},
@@ -75426,4 +75415,15 @@ Mathematics, pages 556--588 (Springer, 1985)}",
   pages={100--110},
   year={1994},
   publisher={Elsevier}
+}
+
+@article{Heller:1990sg,
+    author = "Heller, Urs M.",
+    title = "Higgs mass bound on an F(4) lattice",
+    reportNumber = "FSU-SCRI-90C-180",
+    doi = "10.1016/0920-5632(91)90985-N",
+    journal = "Nucl. Phys. B Proc. Suppl.",
+    volume = "20",
+    pages = "609--612",
+    year = "1991"
 }
