Added Gauge theories on BCT introduction and avg plaq value

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -75427,3 +75427,38 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     pages = "609--612",
     year = "1991"
 }
+
+@article{Celmaster:1983hs,
+    author = "Celmaster, William",
+    title = "Evidence for Improved Scaling on a Body Centered Hypercubic Lattice",
+    reportNumber = "NUB 2617",
+    doi = "10.1103/PhysRevLett.52.403",
+    journal = "Phys. Rev. Lett.",
+    volume = "52",
+    pages = "403",
+    year = "1984"
+}
+
+@article{CELMASTER1985415,
+title = {Monte Carlo simulation of pure SU(2) gauge theory on a body-centered hypercubic lattice},
+journal = {Computer Physics Communications},
+volume = {34},
+number = {4},
+pages = {415-425},
+year = {1985},
+issn = {0010-4655},
+doi = {https://doi.org/10.1016/0010-4655(85)90069-4},
+url = {https://www.sciencedirect.com/science/article/pii/0010465585900694},
+author = {W. Celmaster and K.J.M. Moriarty}
+}
+
+@article{Konig:1983dg,
+    author = "Konig, A. and Mutter, K. H. and Paech, J. and Schilling, K.",
+    title = "Correlation Length for SU(3) Gauge Theory on an 8**4 Lattice",
+    reportNumber = "WU B 83-26",
+    doi = "10.1016/0370-2693(84)91929-4",
+    journal = "Phys. Lett. B",
+    volume = "138",
+    pages = "410--412",
+    year = "1984"
+}
