Removed duplicate entries.

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -117,16 +117,6 @@
 }
   publisher="Springer Berlin Heidelberg",
 
-@article{Georgi:1974sy,
-    author = "Georgi, Howard and Glashow, Sheldon L.",
-    title = "{Unity of All Elementary Particle Forces}",
-    doi = "10.1103/PhysRevLett.32.438",
-    journal = "Phys. Rev. Lett.",
-    volume = "32",
-    pages = "438--441",
-    year = "1974",
-}
-
 @book{tinkham2003group,
   title = "{Group Theory and Quantum Mechanics}",
   author = "Tinkham, Michael",
@@ -177,12 +167,13 @@
     title = "{Quantum chromodynamics on the lattice}",
     author = "Gattringer, Christof and Lang, Christian~B.",
     doi = "10.1007/978-3-642-01850-3",
-    isbn = "978-3-642-01849-7, 978-3-642-01850-3",
+    isbn = "978-3-642-01850-3",
     publisher = "Berlin: Springer",
     volume = "788",
     year = "2010"
 }
     publisher = "Springer",
+% ISBN 978-3-642-01849-7, 
 
 @book{Blaschke:2022lqb,
     editor = "Blaschke, David and Redlich, Krzysztof and Sasaki, Chihiro and Turko, Ludwik",
@@ -398,12 +389,13 @@
     author = "Montvay, I. and M{\"u}nster, G.",
     title = "{Quantum fields on a lattice}",
     doi = "10.1017/CBO9780511470783",
-    isbn = "978-0-521-59917-7, 978-0-511-87919-7",
+    isbn = "978-0-521-59917-7",
     publisher = "Cambridge University Press",
     series = "Cambridge Monographs on Mathematical Physics",
     month = "3",
     year = "1997"
 }
+% ISBN ", 978-0-511-87919-7",
 
 @book{Friman:2011zz,
     editor = "Friman, Bengt and Hohne, Claudia and Knoll, Jorn and Leupold, Stefan and Randrup, Jorgen and Rapp, Ralf and Senger, Peter",
@@ -36279,21 +36271,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     year = "2005"
 }
 
-@article{Majumder:2010qh,
-      author         = "Majumder, A. and Van Leeuwen, M.",
-      title          = "{The Theory and Phenomenology of Perturbative QCD Based
-                        Jet Quenching}",
-      journal        = "Prog. Part. Nucl. Phys.",
-      volume         = "A66",
-      year           = "2011",
-      pages          = "41-92",
-      doi            = "10.1016/j.ppnp.2010.09.001",
-      eprint         = "1002.2206",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
-      SLACcitation   = "%%CITATION = ARXIV:1002.2206;%%"
-}
-
 @article{Okuno:2015kuc,
       author         = "Okuno, Shizuka and Suzuki, Mariko and Tsuchiya, Asato",
       title          = "{Entanglement entropy in scalar field theory on the fuzzy
@@ -41128,22 +41105,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-lat",
       SLACcitation   = "%%CITATION = ARXIV:1605.02997;%%"
-}
-
-@article{Qin:2007rn,
-      author         = "Qin, Guang-You and Ruppert, Jorg and Gale, Charles and
-                        Jeon, Sangyong and Moore, Guy D. and Mustafa, Munshi G.",
-      title          = "{Radiative and collisional jet energy loss in the
-                        quark-gluon plasma at RHIC}",
-      journal        = "Phys. Rev. Lett.",
-      volume         = "100",
-      year           = "2008",
-      pages          = "072301",
-      doi            = "10.1103/PhysRevLett.100.072301",
-      eprint         = "0710.0605",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
-      SLACcitation   = "%%CITATION = ARXIV:0710.0605;%%"
 }
 
 @article{DeGrand:2016pur,
@@ -50149,21 +50110,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
       SLACcitation   = "%%CITATION = RMPHA,64,649;%%"
 }
 
-@article{Stephanov:1996ki,
-      author         = "Stephanov, Misha A.",
-      title          = "{Random matrix model of QCD at finite density and the
-                        nature of the quenched limit}",
-      journal        = "Phys. Rev. Lett.",
-      volume         = "76",
-      year           = "1996",
-      pages          = "4472-4475",
-      doi            = "10.1103/PhysRevLett.76.4472",
-      eprint         = "hep-lat/9604003",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-lat",
-      SLACcitation   = "%%CITATION = HEP-LAT/9604003;%%"
-}
-
 @article{Alford:1997zt,
       author         = "Alford, Mark G. and Rajagopal, Krishna and Wilczek,
                         Frank",
@@ -56645,17 +56591,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
   url = "https://link.aps.org/doi/10.1103/PhysRev.140.A1165",
 }
 
-@article{Coleman:1967ad,
-    author = "Coleman, Sidney R. and Mandula, J.",
-    editor = "Zichichi, A.",
-    title = "{All Possible Symmetries of the S Matrix}",
-    doi = "10.1103/PhysRev.159.1251",
-    journal = "Phys. Rev.",
-    volume = "159",
-    pages = "1251--1256",
-    year = "1967",
-}
-
 @article{Dorey:1998pt,
     author = "Dorey, Patrick and Tateo, Roberto",
     title = "{Anharmonic oscillators, the thermodynamic Bethe ansatz, and nonlinear integral equations}",
@@ -56779,17 +56714,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     year = "1990",
 }
 
-@article{Klassen:1990dx,
-    author = "Klassen, Timothy R. and Melzer, Ezer",
-    title = "{The Thermodynamics of purely elastic scattering theories and conformal perturbation theory}",
-    reportNumber = "EFI-90-25-CHICAGO, UMTG-156",
-    doi = "10.1016/0550-3213(91)90159-U",
-    journal = "Nucl. Phys. B",
-    volume = "350",
-    pages = "635--689",
-    year = "1991",
-}
-
 @article{Kormos:2009yp,
     author = "Kormos, M. and Mussardo, G. and Trombettoni, A.",
     title = "{1D Lieb-Liniger Bose Gas as Non-Relativistic Limit of the Sinh-Gordon Model}",
@@ -56910,18 +56834,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     primaryClass = "hep-th",
     month = "6",
     year = "2020",
-}
-
-@inproceedings{Ginsparg:1988ui,
-    author = "Ginsparg, Paul H.",
-    title = "{Applied Conformal Field Theory}",
-    booktitle = "{Les Houches Summer School in Theoretical Physics: Fields, Strings, Critical Phenomena}",
-    eprint = "hep-th/9108028",
-    archivePrefix = "arXiv",
-    reportNumber = "HUTP-88-A054",
-    pages = "1--168",
-    month = "9",
-    year = "1988",
 }
 
 @article{Wilson:1973,
@@ -58166,18 +58078,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     author = "Kunihiro, Teiji and Sekiguchi, Muneo and Nakamura, A. and Nonaka, C. and Wada, Hiroaki",
     title = "{Study of scalar mesons from lattice quantum chromodynamics}",
     year = "2005"
-}
-
-@article{Bratkovskaya:2005wj,
-    author = "Bratkovskaya, E.L. and others",
-    editor = "Bracco, Mirian and Chiapparini, Marcelo and Ferreira, Erasmo and Kodama, Takeshi",
-    title = "{Collective flow signals the quark gluon plasma}",
-    doi = "10.1063/1.1843603",
-    journal = "AIP Conf. Proc.",
-    volume = "739",
-    number = "1",
-    pages = "305--329",
-    year = "2004"
 }
 
 @article{Bass:2004di,
@@ -63993,19 +63893,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     year = "1985"
 }
 
-@article{Majumder:2010ik,
-    author = "Majumder, Abhijit and Muller, Berndt",
-    title = "{Hadron Mass Spectrum from Lattice QCD}",
-    eprint = "1008.1747",
-    archivePrefix = "arXiv",
-    primaryClass = "hep-ph",
-    doi = "10.1103/PhysRevLett.105.252002",
-    journal = "Phys. Rev. Lett.",
-    volume = "105",
-    pages = "252002",
-    year = "2010"
-}
-
 @inbook{Turko:2015nma,
     author = "Turko, Ludwik",
     editor = "Rafelski, Johann",
@@ -64017,17 +63904,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     doi = "10.1007/978-3-319-17545-4{$\_$}10",
     pages = "81--86",
     year = "2016"
-}
-
-@article{Reuter:1993nn,
-    author = "Reuter, M. and Wetterich, C.",
-    title = "{Running gauge coupling in three-dimensions and the electroweak phase transition}",
-    reportNumber = "DESY-93-006, HD-THEP-92-62",
-    doi = "10.1016/0550-3213(93)90134-B",
-    journal = "Nucl. Phys. B",
-    volume = "408",
-    pages = "91--132",
-    year = "1993"
 }
 
 @article{Edwards:2009qw,
@@ -64207,16 +64083,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     reportNumber = "CPT-79/P-1082",
 }
 
-@article{Maiani:1990ca,
-    author = "Maiani, L. and Testa, M.",
-    title = "{Final state interactions from Euclidean correlation functions}",
-    doi = "10.1016/0370-2693(90)90695-3",
-    journal = "Phys. Lett. B",
-    volume = "245",
-    pages = "585--590",
-    year = "1990"
-}
-
 @article{Berges:2006xc,
     author = "Berges, J. and Bors{\'a}nyi, Sz. and Sexty, D. and Stamatescu, I.-O.",
     title = "{Lattice simulations of real-time quantum fields}",
@@ -64308,21 +64174,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
   year = "2016",
   doi = "10.1103/PhysRevX.6.031007",
   url = "https://link.aps.org/doi/10.1103/PhysRevX.6.031007",
-}
-
-@article{Klco:2018kyo,
-    author = "Klco, N. and Dumitrescu, E. F. and McCaskey, A. J. and Morris, T. D. and Pooser, R. C. and Sanz, M. and Solano, E. and Lougovski, P. and Savage, M. J.",
-    title = "{Quantum-classical computation of Schwinger model dynamics using quantum computers}",
-    eprint = "1803.03326",
-    archivePrefix = "arXiv",
-    primaryClass = "quant-ph",
-    reportNumber = "INT-PUB-18-013",
-    doi = "10.1103/PhysRevA.98.032331",
-    journal = "Phys. Rev. A",
-    volume = "98",
-    number = "3",
-    pages = "032331",
-    year = "2018"
 }
 
 @article{Alexandru:2019nsa,
@@ -65438,19 +65289,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     year = "2015"
 }
 
-@article{Becattini:2000jw,
-    author = "Becattini, F. and Cleymans, J. and Ker{\"a}nen, A. and Suhonen, E and Redlich, K.",
-    title = "{Features of particle multiplicities and strangeness production in central heavy ion collisions between 1.7A-GeV/c and 158A-GeV/c}",
-    eprint = "hep-ph/0002267",
-    archivePrefix = "arXiv",
-    reportNumber = "BI-TP-00-02, DFF-349-02-2000",
-    doi = "10.1103/PhysRevC.64.024901",
-    journal = "Phys. Rev. C",
-    volume = "64",
-    pages = "024901",
-    year = "2001"
-}
-
 @article{Zyla:2020zbs,
     author = "Zyla, P.A. and others",
     collaboration = "Particle Data Group",
@@ -66024,20 +65862,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     year = "2020"
 }
 
-@article{Davoudi:2020ngi,
-    author = "Davoudi, Zohreh and Detmold, William and Orginos, Kostas and Parre\~no, Assumpta and Savage, Martin J. and Shanahan, Phiala and Wagman, Michael L.",
-    title = "{Nuclear matrix elements from lattice QCD for electroweak and beyond-Standard-Model processes}",
-    eprint = "2008.11160",
-    archivePrefix = "arXiv",
-    primaryClass = "hep-lat",
-    reportNumber = "MIT-CTP/5229, UMD-PP-020-4, ICCUB-20-018, FERMILAB-PUB-20-445-T",
-    doi = "10.1016/j.physrep.2020.10.004",
-    journal = "Phys. Rept.",
-    volume = "900",
-    pages = "1--74",
-    year = "2021"
-}
-
 @article{Davoudi:2020xdv,
     author = "Davoudi, Zohreh and Kadam, Saurabh V.",
     title = "{Two-neutrino double-$\beta$ decay in pionless effective field theory from a Euclidean finite-volume correlation function}",
@@ -66606,19 +66430,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     year = "2019"
 }
 
-@inproceedings{Cloet:2019wre,
-    author = "Dietrich, Matthew R. and others",
-    editor = "Clo{\"e}t, Ian C. and Dietrich, Matthew R.",
-    title = "{Opportunities for Nuclear Physics {\textbackslash{}\&} Quantum Information Science}",
-    booktitle = "{Intersections between Nuclear Physics and Quantum Information}",
-    eprint = "1903.05453",
-    archivePrefix = "arXiv",
-    primaryClass = "nucl-th",
-    reportNumber = "FERMILAB-CONF-19-098-TD",
-    month = "3",
-    year = "2019"
-}
-
 @article{Meurice:2019ddf,
     author = "Meurice, Yannick",
     title = "{Examples of symmetry-preserving truncations in tensor field theory}",
@@ -67154,20 +66965,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     year = "2020"
 }
 
-@article{Banuls:2019bmf,
-    author = "Ba{\~n}uls, M. C. and others",
-    title = "{Simulating Lattice Gauge Theories within Quantum Technologies}",
-    eprint = "1911.00003",
-    archivePrefix = "arXiv",
-    primaryClass = "quant-ph",
-    doi = "10.1140/epjd/e2020-100571-8",
-    journal = "Eur. Phys. J. D",
-    volume = "74",
-    number = "8",
-    pages = "165",
-    year = "2020"
-}
-
 @article{Chanda:2019fiu,
     author = "Chanda, Titas and Zakrzewski, Jakub and Lewenstein, Maciej and Tagliacozzo, Luca",
     title = "{Confinement and lack of thermalization after quenches in the bosonic Schwinger model}",
@@ -67340,19 +67137,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     year = "2013"
 }
 
-@article{Tagliacozzo:2012df,
-    author = "Tagliacozzo, L. and Celi, A. and Orland, P. and Lewenstein, M.",
-    title = "{Simulations of non-Abelian gauge theories with optical lattices}",
-    eprint = "1211.2704",
-    archivePrefix = "arXiv",
-    primaryClass = "cond-mat.quant-gas",
-    doi = "10.1038/ncomms3615",
-    journal = "Nature Commun.",
-    volume = "4",
-    pages = "2615",
-    year = "2013"
-}
-
 @article{Koffel:2012cu,
     author = "Koffel, Thomas and Lewenstein, M. and Tagliacozzo, Luca",
     title = "{Entanglement entropy for the long range Ising chain}",
@@ -67364,19 +67148,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     volume = "109",
     pages = "267203",
     year = "2012"
-}
-
-@article{Tagliacozzo:2012vg,
-    author = "Tagliacozzo, L. and Celi, A. and Zamora, A. and Lewenstein, M.",
-    title = "{Optical Abelian Lattice Gauge Theories}",
-    eprint = "1205.0496",
-    archivePrefix = "arXiv",
-    primaryClass = "cond-mat.quant-gas",
-    doi = "10.1016/j.aop.2012.11.009",
-    journal = "Annals Phys.",
-    volume = "330",
-    pages = "160--191",
-    year = "2013"
 }
 
 @article{Alba:2011fu,
@@ -69155,18 +68926,6 @@ Mathematics, pages 556--588 (Springer, 1985)}",
     volume = "114",
     pages = "191803",
     year = "2015"
-}
-
-@inproceedings{Bordone:2022qez,
-    author = "Bordone, Marzia and Gambino, Paolo",
-    title = "{The semileptonic {$B_s$} and {$\Lambda_b$} widths}",
-    booktitle = "{11th International Workshop on the CKM Unitarity Triangle}",
-    eprint = "2203.13107",
-    archivePrefix = "arXiv",
-    primaryClass = "hep-ph",
-    reportNumber = "CERN-TH-2022-050",
-    month = "3",
-    year = "2022"
 }
 
 @article{Colquhoun:2022atw,
@@ -75396,7 +75155,7 @@ Mathematics, pages 556--588 (Springer, 1985)}",
 	doi        = {10.1142/s0129055x99000362},
 	url        = {https://doi.org/10.1142%2Fs0129055x99000362},
 	year       = 1999,
-	month      = {oct},
+	month      = {10},
 	publisher  = {World Scientific Pub Co Pte Lt},
 	volume     = {11},
 	number     = {09},
