Commented junk characters.

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -6,13 +6,13 @@
   year="2022",
   publisher="Cambridge: Cambridge University Press",
 }
-\begin{etaremune}
-  \item E.~Keski-Vakkuri, C.~Montonen and M.~Panero,
-  \pubskip \myemph{Mathematical Methods for Physics -- An Introduction to Group Theory, Topology and Geometry},
-  \pubskip Cambridge University Press (Cambridge, UK), 2022
+%\begin{etaremune}
+%  \item E.~Keski-Vakkuri, C.~Montonen and M.~Panero,
+%  \pubskip \myemph{Mathematical Methods for Physics -- An Introduction to Group Theory, Topology and Geometry},
+%  \pubskip Cambridge University Press (Cambridge, UK), 2022
 % 14 December 2022
-  \pubskip ISBN: 9781107191136
-  \pubskip DOI: \href{https://doi.org/10.1017/9781108120531}{\mytt{10.1017/9781108120531}},
+%  \pubskip ISBN: 9781107191136
+%  \pubskip DOI: \href{https://doi.org/10.1017/9781108120531}{\mytt{10.1017/9781108120531}},
 
 
 @book{jones2020groups,
@@ -23,7 +23,7 @@
   year="2020",
   publisher="Boca Raton, FL: CRC Press"
 }
-  publisher="CRC Press"
+%  publisher="CRC Press"
 
 @book{nakahara2003geometry,
   title="{Geometry, Topology and Physics, Second Edition}",
@@ -35,7 +35,7 @@
   year="2003",
   publisher="Oxfordshire: Taylor \& Francis",
 }
-  publisher="Taylor \& Francis",
+%  publisher="Taylor \& Francis",
 
 @book{lee2003introduction,
   title="{Introduction to Smooth Manifolds}",
@@ -47,7 +47,7 @@
   year="2003",
   publisher="Berlin, Heidelberg: Springer",
 }
-  publisher="Springer",
+%  publisher="Springer",
 
 @book{lee2009manifolds,
   title="{Manifolds and Differential Geometry}",
@@ -59,7 +59,7 @@
   year="2009",
   publisher="Providence, RI: American Mathematical Society",
 }
-  publisher="American Mathematical Society",
+%  publisher="American Mathematical Society",
 
 @book{carroll2019spacetime,
   title="{Spacetime and Geometry}",
@@ -70,7 +70,7 @@
   year="2019",
   publisher="Cambridge: Cambridge University Press",
 }
-  publisher="Cambridge University Press",
+%  publisher="Cambridge University Press",
 
 @book{wald2010general,
   title="{General Relativity}",
@@ -80,7 +80,7 @@
   year="2010",
   publisher="Chicago, IL: University of Chicago Press",
 }
-  publisher="University of Chicago Press",
+%  publisher="University of Chicago Press",
 
 @book{misner2017gravitation,
   title="{Gravitation}",
@@ -91,7 +91,7 @@
   year="2017",
   publisher="Princeton: Princeton University Press",
 }
-  publisher="Princeton University Press",
+%  publisher="Princeton University Press",
 
 @book{georgi1999lie,
   title="{Lie Algebras In Particle Physics: from Isospin To Unified Theories}",
@@ -103,7 +103,7 @@
   year="1999",
   publisher="New York: Avalon Publishing",
 }
-  publisher="Avalon Publishing",
+%  publisher="Avalon Publishing",
 
 @book{iachello2007lie,
   title="{Lie Algebras and Applications}",
@@ -115,7 +115,7 @@
   year="2007",
   publisher="Berlin, Heidelberg: Springer",
 }
-  publisher="Springer Berlin Heidelberg",
+%  publisher="Springer Berlin Heidelberg",
 
 @book{tinkham2003group,
   title = "{Group Theory and Quantum Mechanics}",
@@ -127,7 +127,7 @@
   year = "2003",
   publisher = "New York: Dover Publications",
 }
-  publisher = "Dover Publications",
+%  publisher = "Dover Publications",
 
 @book{nash2011topology,
   title = "{Topology and Geometry for Physicists}",
@@ -139,7 +139,7 @@
   year = "2011",
   publisher = "New York: Dover Publications",
 }
-  publisher = "Dover Publications",
+%  publisher = "Dover Publications",
 
 @book{hamermesh1989group,
   title = "{Group Theory and Its Application to Physical Problems}",
@@ -151,7 +151,7 @@
   year = "1989",
   publisher = "New York: Dover Publications",
 }
-  publisher = "Dover Publications",
+%  publisher = "Dover Publications",
 
 @book{srednicki2007quantum,
   title = "{Quantum Field Theory}",
@@ -161,7 +161,7 @@
   year = "2007",
   publisher = "Cambridge: Cambridge University Press",
 }
-  publisher = "Cambridge University Press",
+%  publisher = "Cambridge University Press",
 
 @book{Gattringer:2010zz,
     title = "{Quantum chromodynamics on the lattice}",
@@ -172,7 +172,7 @@
     volume = "788",
     year = "2010"
 }
-    publisher = "Springer",
+%    publisher = "Springer",
 % ISBN 978-3-642-01849-7, 
 
 @book{Blaschke:2022lqb,
@@ -185,7 +185,7 @@
     month = "2",
     year = "2022"
 }
-    publisher = "Springer",
+%    publisher = "Springer",
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -16475,8 +16475,7 @@
 
 @article{Dumitru:2003cf,
      author    = "Dumitru, Adrian and Roder, Dirk and Ruppert, Jorg",
-     title     = "{The quark-mass dependence of T(c) in QCD: Working up from
-                  m = 0 or down  from m = infinity?}",
+     title     = "{The quark-mass dependence of T(c) in QCD: Working up from m = 0 or down  from m = infinity?}",
      journal   = "Phys. Rev.",
      volume    = "D70",
      year      = "2004",
@@ -25111,8 +25110,7 @@ Mathematics, pages 556--588 (Springer, 1985)}",
 @article{Gubser:1998nz,
       author         = "Gubser, Steven S. and Klebanov, Igor R. and Tseytlin,
                         Arkady A.",
-      title          = "{Coupling constant dependence in the thermodynamics of
-                        N=4 supersymmetric Yang-Mills theory}",
+      title          = "{Coupling constant dependence in the thermodynamics of N=4 supersymmetric Yang-Mills theory}",
       journal        = "Nucl. Phys.",
       volume         = "B534",
       pages          = "202-222",
