Fixed page numbering.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -10,7 +10,7 @@
 \begin{document}
 
 
-\pagenumbering{roman}
+\pagenumbering{alph}
 \input{CoverITAuc}
 %\input{CoverIta}
 %\input{CoverENGuc}
@@ -18,7 +18,7 @@
 \cleardoublepage
 
 \newpage
-\pagenumbering{Roman}
+\pagenumbering{roman}
 \input{Abstract}
 
 \newpage
@@ -34,18 +34,32 @@
 \input{LatticeQCD}
 
 \newpage
+\cleardoublepage
 \input{GaugeSim}
 
 \newpage
+\cleardoublepage
 \input{F4Lattice}
 
 \newpage
+\cleardoublepage
 \input{SimulationResults}
 
 \newpage
+\cleardoublepage
 \input{Conclusions}
 
 \newpage
+\cleardoublepage
+\appendix
+\pagenumbering{Roman}
+
+\newpage
+\cleardoublepage
+\input{Code}
+
+\newpage
+\cleardoublepage
 \input{Bibliography}
 
 \end{document}
