Added future article.

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -75219,3 +75219,9 @@ author = {W. Celmaster and K.J.M. Moriarty}
     pages = "410--412",
     year = "1984"
 }
+
+@misc{Aliberti:2024soa,
+       author = "Aliberti, Marco and Panero, Marco",
+       title  = "{Gauge fields on a highly symmetric grid: A systematic study of Yang--Mills theory on the {$F_4$} lattice}",
+       year   = "in preparation",
+}
