--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -75223,5 +75223,5 @@ author = {W. Celmaster and K.J.M. Moriarty}
 @misc{Aliberti:2024soa,
        author = "Aliberti, Marco and Panero, Marco",
        title  = "{Gauge fields on a highly symmetric grid: A systematic study of Yang--Mills theory on the {$F_4$} lattice}",
-       year   = "in preparation",
+       year   = "In preparation",
 }
