Changed citation style. Badboxes to be fixed.

--- a/Presentation/Bibliography.bib
+++ b/Presentation/Bibliography.bib
@@ -47,7 +47,10 @@
 }
 
 @online{f4image,
-      url   = "https://en.wikipedia.org/wiki/F4_%28mathematics%29"
+      author  = "Wikipedia",
+      yeear   = "2023",
+      urldate = "2023-08-29",
+      url     = "https://en.wikipedia.org/wiki/F4_%28mathematics%29"
 }
 
 @article{Panero:2009tv,
