--- a/Presentation/Libraries.tex
+++ b/Presentation/Libraries.tex
@@ -1,7 +1,7 @@
 \usepackage{physics}
 \usepackage{xcolor}
 \usepackage{dsfont}
-\usepackage[backend=biber,style=numeric-comp,sorting=none]{biblatex}
+\usepackage[backend=biber,style=authoryear-comp,sorting=none]{biblatex}
 \usepackage{hyperref}
 \usepackage[T1]{fontenc}
 \usepackage{comment}
