Added new images.

--- a/Presentation/Bibliography.bib
+++ b/Presentation/Bibliography.bib
@@ -48,9 +48,9 @@
 
 @online{f4image,
       author  = "Wikipedia",
-      yeear   = "2023",
-      urldate = "2023-08-29",
-      url     = "https://en.wikipedia.org/wiki/F4_%28mathematics%29"
+      yeear   = "2010",
+      urldate = "2010-12-13",
+      url     = "https://en.wikipedia.org/wiki/F4_%28mathematics%29#/media/File:F4_roots_by_24-cell_duals.svg"
 }
 
 @article{Panero:2009tv,
@@ -81,4 +81,18 @@
       primaryClass   = "hep-lat",
       reportNumber   = "HIP-2012-05-TH, NSF-KITP-12-013",
       SLACcitation   = "%%CITATION = ARXIV:1202.2762;%%",
+}
+
+@online{protonImg,
+      author  = "CERN",
+      yeear   = "2019",
+      urldate = "2019-06-12",
+      url     = "https://home.cern/news/news/physics/proton-century"
+}
+
+@online{LeonardoImg,
+      author  = "Wikipedia",
+      yeear   = "2022",
+      urldate = "2022-09-25",
+      url     = "https://en.wikipedia.org/wiki/Leonardo_(supercomputer)#/media/File:Modello_Leonardo.jpg"
 }
