--- a/Presentation/Bibliography.bib
+++ b/Presentation/Bibliography.bib
@@ -96,3 +96,10 @@
       urldate = "2022-09-25",
       url     = "https://en.wikipedia.org/wiki/Leonardo_(supercomputer)#/media/File:Modello_Leonardo.jpg"
 }
+
+@online{StrongForceImg,
+      author  = "NASA",
+      yeear   = "2022",
+      urldate = "2022-12-20",
+      url     = "https://universe.nasa.gov/resources/254/strong-force/"
+}
