Modified date to the 23 oct

--- a/Presentation/Settings.tex
+++ b/Presentation/Settings.tex
@@ -3,8 +3,8 @@
 %\subtitle{}
 \author{Marco Aliberti}
 \institute[]{Università degli Studi di Torino}
-\date{\today}
-%\date{\formatdate{13}{07}{2023}}
+%\date{\today}
+\date{\formatdate{23}{10}{2023}}
 
 \setbeamertemplate{navigation symbols}{} % Uncomment to remove navigation buttons
 
