--- a/Presentation/Settings.tex
+++ b/Presentation/Settings.tex
@@ -25,3 +25,15 @@
 \let\oldCite\cite
 \renewcommand{\cite}[1]{\textsuperscript{[\oldCite{#1}]}}
 \renewcommand*{\nameyeardelim}{\addcomma\space}
+
+\begin{comment}
+\tikzset{
+    myarrow/.style={
+        draw,
+        fill=orange,
+        single arrow,
+        minimum height=3.5ex,
+        single arrow head extend=1ex
+    }
+}
+\end{comment}
