--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -17,7 +17,16 @@
 %\input{CoverEng}
 \cleardoublepage
 
+\thispagestyle{empty}
+\vspace*{\stretch{1}}
+\begin{flushright}
+\itshape Dedicato\\
+\textit{Ai miei nonni.}
+\end{flushright}
+\vspace{\stretch{2}}
+
 \newpage
+\cleardoublepage
 \pagenumbering{roman}
 \input{Abstract}
 
@@ -65,5 +74,9 @@
 \newpage
 \cleardoublepage
 \input{Bibliography}
+
+\newpage
+\cleardoublepage
+\input{Acknowledgements}
 
 \end{document}
